--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <app-root></app-root>
 </body>
 </html>
-<script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD" data-sdk-integration-source="button-factory"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=AQ7JlLUGJvYWYM7xOnUQ_ozFAPeD2RRjSBS1JPqv2Rs2n1uK9bOZ1ugDmi50KAmcb68ezmXScOm2N0rH&currency=USD" data-sdk-integration-source="button-factory"></script>
 <script>
   paypal.Buttons({
       style: {
@@ -28,7 +28,7 @@
           return actions.order.create({
               purchase_units: [{
                   amount: {
-                      value: '34.99'
+                      value: '43'
                   }
               }]
           });
@@ -39,5 +39,28 @@
           });
       }
   }).render('#paypal-button-container');
+  paypal.Buttons({
+      style: {
+          shape: 'rect',
+          color: 'gold',
+          layout: 'vertical',
+          label: 'paypal',
+          
+      },
+      createOrder: function(data, actions) {
+          return actions.order.create({
+              purchase_units: [{
+                  amount: {
+                      value: '42.5'
+                  }
+              }]
+          });
+      },
+      onApprove: function(data, actions) {
+          return actions.order.capture().then(function(details) {
+              alert('Transaction completed by ' + details.payer.name.given_name + '!');
+          });
+      }
+  }).render('#paypal-button-container2');
   
 </script>
