--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Fcastillo</title>
+  <title>VOTE</title>
   <base href="/">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content= "width=device-width, user-scalable=no">
@@ -39,28 +39,29 @@
           });
       }
   }).render('#paypal-button-container');
-  paypal.Buttons({
-      style: {
-          shape: 'rect',
-          color: 'gold',
-          layout: 'vertical',
-          label: 'paypal',
+//   paypal.Buttons({
+//       style: {
+//           shape: 'rect',
+//           color: 'gold',
+//           layout: 'vertical',
+//           label: 'paypal',
           
-      },
-      createOrder: function(data, actions) {
-          return actions.order.create({
-              purchase_units: [{
-                  amount: {
-                      value: '42.5'
-                  }
-              }]
-          });
-      },
-      onApprove: function(data, actions) {
-          return actions.order.capture().then(function(details) {
-              alert('Transaction completed by ' + details.payer.name.given_name + '!');
-          });
-      }
-  }).render('#paypal-button-container2');
+//       },
+//       createOrder: function(data, actions) {
+//           return actions.order.create({
+//               purchase_units: [{
+//                   amount: {
+//                       value: '42.5'
+//                   }
+//               }]
+//           });
+//       },
+//       onApprove: function(data, actions) {
+//           return actions.order.capture().then(function(details) {
+//               alert('Transaction completed by ' + details.payer.name.given_name + '!');
+//           });
+//       }
+//   }).render('#paypal-button-container2');
   
 </script>
+
