refactoring code, all code pasted for review

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
    <!-- Hammer JS -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
    <script>
-    TouchEmulator();
+    // TouchEmulator();
     </script>
 </head>
 <body class="mat-typography">
