--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
   <script src="echarts.min.js"></script>
    <!-- Hammer JS -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
+   <script src="https://hammerjs.github.io/dist/hammer.js"></script>
    <script>
     // TouchEmulator();
     </script>
