hours of service

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
   <script src="https://cdn.ckeditor.com/4.14.1/full-all/ckeditor.js"></script>
    <!-- Hammer JS -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
-   <script>
-    // TouchEmulator();
-    </script>
+   <script src="https://commerce.coinbase.com/v1/checkout.js?version=201807">
+   </script>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
