qr code component implemented

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
    </script>
 
 </head>
-<body class="mat-typography">
+<body style="background-color: rgb(27, 27, 27);" class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
