--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 
-  <link rel="apple-touch-icon" href="./assets/icons/icon-192x192.png">
+  <!-- <link rel="apple-touch-icon" href="./assets/icons/icon-192x192.png"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
