--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BI Tools</title>
+  <title>BrandMatrix</title>
   <base href="/">
 
   <!-- DESKTOP -->
