--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BrandMatrix</title>
+  <title>BMX v.1.0.15</title>
   <base href="/">
 
   <!-- DESKTOP -->
